# Uniplansy

./: .gitignore  CHANGELOG.md  LICENSE.txt  Minecraft.txt  README.md  core.py  design.odt  design_notes.md  factorio.txt  future_features.md  imported design notes.md  other_planner_integration.md  possible_names.md  pyproject.toml  requirements.odt  serialization.md  setup.py  similar_systems.md  stardew valley.txt  style_guide.md
.github/workflows/: python-publish.yml
test/: test_decompsers.py
uniplansy/: __init__.py
uniplansy/decomposers/: __init__.py  core.py
uniplansy/planner/: __init__.py  base.py  core.py  decomposer_selection_strategy.py  plan_cache_strategy.py  plan_selection_strategy.py  planning_strategy.py  stopping_strategy.py
uniplansy/plans/: constraints.py  plan.py  plan_comparison_strategy.py  plan_graph_node.py  structural_comparison_strategies.py
uniplansy/reasoners/: base.py  core.py  graph.py
uniplansy/reasoners/considerations/: core.py
uniplansy/reasoners/convert/: __init__.py  core.py
uniplansy/tasks/: task_filter.py  tasks.py
uniplansy/util/: FreezableObject.py  __init__.py  custom_copyable.py  global_type_vars.py  has_preferred_name.py  has_uid.py  id_registry.py
uniplansy/util/guid_suppliers/: __init__.py  guid_supplier.py
uniplansy/util/guid_suppliers/thread_local/: __init__.py  thread_local_guid_supplier.py
uniplansy/util/guid_suppliers/uuid/: __init__.py  uuid_guid_suppliers.py  uuid_guid_suppliers_3_14.py
uniplansy/util/guid_suppliers/wrappers/: wrappers.py
uniplansy/util/persistence/: persistence_manager.py
uniplansy/util/persistence/jsonpickle_backend/: __init__.py  jsonpickle_persistence_manager.py
uniplansy/util/persistence/pickle_backend/: pickle_persistence_manager.py
uniplansy/util/uid_suppliers/: __init__.py  default_guid_supplier.py  uid_supplier.py
uniplansy/util/uid_suppliers/counter_based/: counter_based_local_uid_supplier.py  thread_local_guid_supplier.py
uniplansy/util/uid_suppliers/random/: random.py
uniplansy/util/uid_suppliers/uuid/: uuid_guid_suppliers.py  uuid_guid_suppliers_3_14.py
uniplansy/util/uid_suppliers/wrappers/: wrappers.py
