# see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/ for more info on pyproject.toml files
[build-system]
# TODO: select a build system and put it infomation here

[project]
name = "Universal_Planner"
dynamic = ["version"]
dependencies = [
    'immutabledict'
    ]
requires-python = ">= 3.11"
authors = [{name = "miiohau", email = "Miiohau@gmail.com"}]
maintainers = [{name = "miiohau", email = "Miiohau@gmail.com"}]
description = "A framework for making planning systems"
readme = "README.md"
# TODO: uncomment next line and add SPDX license expression (https://packaging.python.org/en/latest/glossary/#term-License-Expression)
# license =
keywords = ["ai planning", "planning", "HTN", "STRIPS", "Game AI pro"]

classifiers = [
    #see https://pypi.org/classifiers/ for full value
    # TODO: may want to update after selecting a license
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 1 - Planning",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
    "Natural Language :: English",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.11",
    #remove next line when ready to upload to PyPI
    "Private :: Do Not Upload"
]

[project.urls]
# TODO: fill these in when ready to upload to github
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#Issues = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"