# see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/ for more info on pyproject.toml files
[build-system]
# hatchling selected because it was the default in the above guide and the appearent nature of the hatch tool set
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "Uniplansy"
dynamic = ["version"]
dependencies = [
    'immutabledict'
]
requires-python = ">= 3.11"
authors = [{ name = "miiohau", email = "Miiohau@gmail.com" }]
maintainers = [{ name = "miiohau", email = "Miiohau@gmail.com" }]
description = "Uniplansy(UNIversal PLANning SYstem). A framework for making planning systems."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
keywords = ["ai planning", "Automated Planning", "planning", "HTN", "STRIPS", "RDDL", "Game AI pro"]

classifiers = [
    #see https://pypi.org/classifiers/ for full values
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
# TODO: fill these in when ready to upload to github
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/Miiohau/Uniplansy"
Issues = "https://github.com/Miiohau/Uniplansy/issues"
Changelog = "https://github.com/Miiohau/Uniplansy/master/CHANGELOG.md"

[project.optional-dependencies]
jsonpickle = ["jsonpickle"]

[tool.hatch.version]
path = "uniplansy/__about__.py"